--- a/k8s-manifests/service.yml
+++ b/k8s-manifests/service.yml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: java-app-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: java-app
   ports:
-  - nodePort: 30082
-    port: 8000
+  - port: 80
     targetPort: 8000
